Footer alignment fix, added report doc

--- a/styles/style.css
+++ b/styles/style.css
@@ -242,3 +242,7 @@ navbar-nav a:hover{
     border-style: solid;
     border-width: 0px 0px 1px 0px;
 }
+
+.fthr{
+    margin-top: 40px;
+}
